# tsm-trainer

./: .gitignore  README.md  pyproject.toml
examples/classification/apc_enter_leave/data/: dataset.py  preprocess.py
examples/classification/apc_enter_leave/evaluation/: metrics.py
examples/classification/apc_enter_leave/training/: augmentation.py  heads.py  run_channel_ablation.py  run_event_detection.py  run_n105_final_report.py  run_n105_gap_sweep.py  run_n105_optimal_sweep.py  run_phase1_sweep.py  run_phase2_experiments.py  run_phase2_final.py  run_phase2_finetune.py
examples/classification/apc_enter_leave/visualization/: curves.py  embeddings.py  style.py
examples/classification/apc_enter_leave_stay/data/: dataset.py  preprocess.py
examples/classification/apc_enter_leave_stay/evaluation/: metrics.py
examples/classification/apc_enter_leave_stay/training/: analyze_phase_e.py  analyze_sweep.py  heads.py  run_experiment.py  run_sweep.py
examples/classification/apc_enter_leave_stay/visualization/: curves.py  (+2 more)
examples/classification/apc_occupancy/: README.md
scripts/forecasting/: README.md  validate_datasets.py
scripts/forecasting/evaluation/: README.md  compare_models.py  download_eval_datasets.py  download_failed_datasets.py  download_fev_bench.py  run_benchmark.py
scripts/forecasting/preprocess/: configs.py  convert_benchmarks_to_unified.py  download_and_prepare.py  download_and_prepare.sh  inspect.py  stage1_kernel_synth.sh  stage2_tsmixup.sh  validate.py
scripts/forecasting/training/: README.md  train.sh  train_chronos2.py  train_single-gpu.sh
(+99 files in other folders)
