[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsm-trainer"
version = "2.2.2"
description = "Time Series Model Trainer — unified framework for training and evaluating time series foundation models"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

# NOTE: torch must be installed separately with the correct CUDA wheel
# (see README Installation section)
dependencies = [
    # Core numerics & data
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scipy>=1.12",

    # HuggingFace ecosystem
    "transformers>=4.40",
    "datasets>=2.18",
    "huggingface_hub>=0.22",
    "peft>=0.10",

    # Model utilities
    "einops>=0.7",

    # Config & I/O
    "PyYAML>=6.0",

    # AWS / remote access
    "boto3>=1.34",
    "botocore>=1.34",
    "requests>=2.31",

    # Monitoring
    "tensorboard>=2.16",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# pip install -e ".[dev]" — includes all evaluation/benchmark libraries
dev = [
    # Time series evaluation
    "gluonts>=0.15",
    "fev>=0.7",           # fev-bench: pip install fev

    # Synthetic data generation (kernel-synth)
    "scikit-learn>=1.4",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
where = ["src"]
